deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  labels:
    app.kubernetes.io/name: mosquitto
spec:
  type: ClusterIP
  ports:
    - port: 8883
      targetPort: tls
      protocol: TCP
      name: tls
  selector:
    app.kubernetes.io/name: mosquitto
