deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: mosquitto
  annotations:
    haproxy.router.openshift.io/disable_cookies: 'true'
    haproxy.router.openshift.io/balance: leastconn
    haproxy.router.openshift.io/rate-limit-connections: 'false'
    haproxy.router.openshift.io/rate-limit-connections.rate-tcp: '20000'
    haproxy.router.openshift.io/rate-limit-connections.concurrent-tcp: '20000'
    haproxy.router.openshift.io/timeout: 90s
    haproxy.router.openshift.io/timeout-tunnel: 6h
  name: mosquitto
spec:
  port:
    targetPort: tls
  tls:
    insecureEdgeTerminationPolicy: None
    termination: passthrough
  to:
    kind: Service
    name: mosquitto
    weight: 100
  wildcardPolicy: None
